package fm;

public class NVSlotStraight extends Slot {

    public NVSlotStraight(){
        name = "Nevada Straight";
        cost = 280;
        software = "Linux";
        components.add("Large");
        components.add("Ticketinticketout");
        components.add("Reels");
        components.add("ARM");
    }
}
