package fm;

public enum slottype {
	    progressive, straight, bonus 
}
