package xmastree;

public class BalsamFir extends Tree {

    public BalsamFir(){
        description = "Balsam Fir tree decorated with ";
    }

    public double cost() {
        return 5;
    }
}
